[package]
name = "redis-rover"
version = "0.1.0"
edition = "2021"
authors = ["Daniil Trotsenko <daniil.trotsenko.dev@gmail.com>"]
readme = "README.md"
keywords = ["redis", "tui", "cli", "terminal"]
categories = ["command-line-utilities"]
documentation = "https://docs.rs/redis-rover"
homepage = "https://github.com/danik-tro/redis-rover"
repository = "https://github.com/danik-tro/redis-rover"
license = "MIT"
description = "A Redis terminal-ui client written in rust 🦀"
rust-version = "1.72"

[dependencies]
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
ratatui = "0.25.0"
tokio = { version = "1.35.1", features = ["full"] }

[[bin]]
bench = false
path = "src/main.rs"
name = "rrover"

[workspace]
resolver = "2"
members = ["crates/core"]
