[package]
name = "redis-rover"
version = "0.1.0"
edition = "2021"
authors = ["Daniil Trotsenko <daniil.trotsenko.dev@gmail.com>"]
readme = "README.md"
keywords = ["redis", "tui", "cli", "terminal"]
categories = ["command-line-utilities"]
documentation = "https://docs.rs/redis-rover"
homepage = "https://github.com/danik-tro/redis-rover"
repository = "https://github.com/danik-tro/redis-rover"
license = "MIT"
description = "A Redis terminal-ui client written in rust 🦀"
rust-version = "1.72"

[dependencies]
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
ratatui = "0.26.0"
tokio = { version = "1.35.1", features = ["full"] }
color-eyre = "0.6.2"

cfg-if = "1.0.0"
human-panic = "2.0.0"
better-panic = "0.3.0"

tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-error = "0.2.0"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "serde", "serde_json"] }

redis = { version = "0.25.3", default-features = false, features = ["aio", "tokio-comp"]}

[[bin]]
bench = false
path = "src/main.rs"
name = "rrover"
